@@ -28,7 +28,7 @@ import net.sf.jailer.Jailer;
 public class DataBrowserContext {
 
 	private static String STANDALONE_APP_NAME = "DBeauty";
-	private static String STANDALONE_APP_VERSION = "2.4";
+	private static String STANDALONE_APP_VERSION = "2.4.1";
 	
 	private static boolean supportsDataModelUpdates = true;
 	private static Boolean standAlone = null;
